[package]
name = "ddpanel"
version = "0.1.0"
authors = ["gwy15 <gwy15thu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biliapi = "0.1.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync"] }
anyhow = "1.0"

log = "0.4.14"
log4rs = "1.0.0"

chrono = "0.4.19"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
futures = "0.3.15"
reqwest = { version = "0.11.3", default-features = false, features = ["rustls-tls"] }
influxdb-client = { version = "*", git = "https://github.com/gwy15/influxdb-client-rs.git", branch = "misc" }
dotenv = "0.15.0"
