[package]
name = "ddpanel-recorder"
version = "0.1.0"
authors = ["gwy15 <gwy15thu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "signal"] }
futures = "0.3.15"
anyhow = "1.0"
dotenv = "0.15.0"
clap = "3.0.0-beta.2"
reqwest = { version = "0.11.3", default-features = false, features = ["rustls-tls"] }

log = "0.4.14"
log4rs = "1.0.0"

chrono = "0.4.19"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"


biliapi = "0.1.2"
influxdb-client = { version = "*", git = "https://github.com/gwy15/influxdb-client-rs.git", branch = "misc" }

# for room info
lazy_static = "1.4.0"
parking_lot = "0.11.1"

# replay
async-compression = { version = "0.3.8", features = ["gzip", "tokio"] }
