[package]
name = "ddpanel"
version = "0.1.0"
authors = ["gwy15 <gwy15thu@gmail.com>"]
edition = "2018"


[[bin]]
name = "ddpanel-cli"
path = "bin/ddpanel-cli.rs"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "signal"] }
futures = "0.3.15"
anyhow = "1.0"
dotenv = "0.15.0"
clap = "3.0.0-beta.2"
reqwest = { version = "0.11.3", default-features = false, features = ["rustls-tls"] }

log = "0.4.14"
log4rs = "1.0.0"
pretty_env_logger = "0.4.0"

chrono = "0.4.19"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
toml = "0.5.8"


biliapi = "0.1.10-beta.4"
# cookie 持久化
cookie_store = "0.15.0"
reqwest_cookie_store = "0.2.0"
influxdb-client = { version = "*", git = "https://github.com/gwy15/influxdb-client-rs.git", branch = "misc" }

# for room info
lazy_static = "1.4.0"
parking_lot = "0.11.1"

# replay
async-compression = { version = "0.3.8", features = ["gzip", "tokio"] }
